# eyetracker

./: .gitignore  CMakeLists.txt  README  eyecapture.cpp  eyecapture.h  eyetracker.cpp  eyetracker.h  headcapture.cpp  headcapture.h
doc/: .gitignore  appendix.tex  discussion.tex  frontpage.tex  introduction.tex  main.tex  methods.tex  results.tex
finalpres/: .gitignore  compile  pres.tex
tracking/: trackingEyeHough.cpp  trackingEyeHough.h  trackingHead.cpp  trackingHead.hpp
